--- a/start/mainpage.html
+++ b/start/mainpage.html
@@ -19,9 +19,9 @@ body {
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-content" id="myDropdown">
-    <a href="#">Silver</a>
+    <a href="http://127.0.0.1:5500/yay/silver/silver.html">Silver</a>
     <a href="#">Illumite</a>
-    <a href="http://127.0.0.1:5500/yay/metal.html">Metal</a>
+    <a href="http://127.0.0.1:5500/yay/metal/metal.html">Metal</a>
   </div>
   </div> 
 </div>
