--- a/index.html
+++ b/index.html
@@ -6,55 +6,37 @@
     <link rel="stylesheet" href="portfoli.css">
     <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-.w3-row-padding img {margin-bottom: 12px}
-.w3-sidebar {width: 120px;background: #222;}
-#main {margin-left: 120px}
+.row-padding img {margin-bottom: 12px}
+.sidebar {width: 120px;background: #222;}
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
 </style>
 <title>PORTFOLIO</title>
 </head>
-<body class="w3-black">
-    <h1>HELLO WORLD!</h1>
-    <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-  <!-- Avatar image in top left corner -->
-  <img src="bilder/seaslug.png" style="width:100%"/>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
-    <i class="fa fa-home w3-xxlarge"></i>
-    <p>HOME</p>
-  </a>
-  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-user w3-xxlarge"></i>
-    <p>ABOUT</p>
-  </a>
-  <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-eye w3-xxlarge"></i>
-    <p>ARTWORK</p>
-  </a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-envelope w3-xxlarge"></i>
-    <p>CONTACT</p>
-  </a>
-</nav>
 
-<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-  <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
-    <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a>
-    <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
-  </div>
+<div id="cat">
+    <img src="bilder/cat.gif" height="50"/>
 </div>
 
-<div class="w3-padding-large" id="main">
-  <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">Hey there!</span> Call me Landlock.</h1>
+<body class="flex-container">
+ <nav class="sidebar">
+    <img src="bilder/scrapcon.png" style="width:100%"/>
+   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
+    <p>HOME</p>
+    </a>
+    <a href="ABOUT.html">ABOUT</a>
+    <a href="itprojects.html">IT PROJECTS</a>
+    <a href="artwork.html">decent art</a>
+    <a href="music.html">"MUSIC"</a>
+    <a href="contact.html">CONTACT</a>
+</nav>
+
+
+<div class="background" id="main">
+  <header>
+    <h1>Hey there!</span> Call me Landlock.</h1> <!-- online name-->
     <p>Beginner coder and hobbyist artist / writer / odd 8-bit musician. :D</p>
     <img src="bilder/test.jpg" alt="test" class="w3-image" width="992" height="1108">
   </header>
 
 
 
-    
-</body>
-</html>
