Julestemning + Mye annet

--- a/JS-GRUNNLEGGENDE/tilfeldige/tilfeldige.html
+++ b/JS-GRUNNLEGGENDE/tilfeldige/tilfeldige.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <script src="tilfeldige.js" defer></script>
+    <title>Tilfeldige Tall</title>
 </head>
 <body>
-
-
-    <img src="bilder/SKONG.png" alt="yeah"/>
+    <p>welp</p>
 </body>
 </html>
