--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </nav>
 
 
-<div class="background" id="main">
+<div class="background" id="main"> 
   <header>
-    <h1>Hey there!</span> Call me Landlock.</h1> <!-- online name-->
+    <h1>Hey there!</span> Call me ---'.</h1> <!-- online name-->
     <p>Beginner coder and hobbyist artist / writer / odd 8-bit musician. :D</p>
     <img src="bilder/test.jpg" alt="test" class="w3-image" width="992" height="1108">
   </header>
