--- a/start/mainpage.html
+++ b/start/mainpage.html
@@ -11,7 +11,7 @@ body {
 </style>
 </head>
 
-<div class="navbar">
+<div class="navbar">+
   <a href="#home">HOME</a>
   <a href="#news">PLOT</a>
   <div class="dropdown">
