--- a/JS-GRUNNLEGGENDE/førerkort/forerkort.html
+++ b/JS-GRUNNLEGGENDE/førerkort/forerkort.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <script src="forerkort.js" defer></script>
+    <title>Førerkort!</title>
 </head>
 <body>
+  
 
-
-    <img src="bilder/SKONG.png" alt="yeah"/>
+  
 </body>
 </html>
