--- a/quotes/test.html
+++ b/quotes/test.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <script src="test.js" defer></script>
+    <title>Document</title>
 </head>
 <body>
-
-
-    <img src="bilder/SKONG.png" alt="yeah"/>
+    <p id="text"></p>
 </body>
 </html>
